# tasks

rust/: Cargo.toml  Dockerfile  cloudbuild.yaml
rust/tasks/: Cargo.toml
rust/tasks/src/: main.rs
rust/todo/: Cargo.toml  Todos.csv
rust/todo/src/: main.rs
vue/: codegen.yml  package-lock.json  package.json
vue/scripts/: typescript-vue-apollo-patch.js  vue-apollo-patch.js
vue/src/: App.vue  main.ts
vue/src/components/: TodoItem.vue  TodoList.vue
vue/src/components/TaskList/: TaskList.vue  task-list.query.graphql  test.mutation.graphql
vue/src/components/TaskList/TaskItem/: TaskItem.vue
vue/src/components/Tasks/: TaskList.vue  task-item.fragment.graphql  task-list.query.graphql
vue/src/router/: index.ts
vue/src/views/: Home.vue
