#cargo-features = ["strip"]

[package]
name = "tasks"
version = "0.1.0"
authors = ["Matt Wright <mattwright3195@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0.2"
actix-cors = "0.3.0"
async-graphql = "2.0.0-alpha.13"
async-graphql-actix-web = "2.0.0-alpha.13"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
anyhow = "1.0.32"
serde = { version = "1.0.116", features = ["derive"] }
#csv = "1"
#meilisearch-sdk = "0"

#[profile.release]
#strip = "symbols"